website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.2.1/guides/markdown-features/markdown-features-intro.mdx
---
id: introduction
description: Docusaurus uses MDX. Find out more about Docusaurus-specific features when writing Markdown.
slug: /markdown-features
---

# Markdown 功能

import BrowserWindow from '@site/src/components/BrowserWindow';

Docusaurus 採用 **[Markdown](https://commonmark.org/)** 作為主要內容編寫格式。

:::tip[學習 Markdown]

您可以[在 10 分鐘內學會 Markdown](https://commonmark.org/help/)。

:::

Docusaurus 使用現代化工具幫助您建立**互動式文檔**。

**[MDX](https://mdxjs.com/)** 編譯器會將 **Markdown 文件轉換為 React 組件**，並允許您在 Markdown 內容中使用 JSX。這讓您能輕鬆地在內容中嵌入 React 組件，創造愉悅的學習體驗。

:::tip[使用 MDX 遊樂場]

**[MDX 遊樂場](https://mdxjs.com/playground/)** 是您的新朋友！

這是一個極具幫助的除錯工具，能展示 MDX 編譯器如何將 Markdown 轉換為 React。

**選項**：選擇正確的格式（MDX 或 CommonMark）以及 Docusaurus 使用的以下插件：`remark-gfm`、`remark-directive`、`rehype-raw`。

:::

## MDX 與 CommonMark 比較 {#mdx-vs-commonmark}

Docusaurus 使用 MDX 編譯器將 `.md` 和 `.mdx` 文件都編譯為 React 組件，但**根據您的設置，語法可能會被不同解讀**。

MDX 編譯器支援[兩種格式](https://mdxjs.com/packages/mdx/#optionsformat)：

- [MDX 格式](https://mdxjs.com/docs/what-is-mdx/)：強大的解析器，允許使用 JSX
- [CommonMark 格式](https://commonmark.org/)：符合標準的 Markdown 解析器，不允許使用 JSX

預設情況下，**Docusaurus v3 出於歷史原因對所有文件（包括 `.md` 文件）使用 MDX 格式**。

您可以使用 [`siteConfig.markdown.format`](../../api/docusaurus.config.js.mdx#markdown) 設置或 `mdx.format: md` 前頁資料**選擇啟用 CommonMark**。

:::tip[如何使用 CommonMark]

如果您計劃使用 CommonMark，我們建議使用 [`siteConfig.markdown.format: 'detect'`](../../api/docusaurus.config.js.mdx#markdown) 設置。系統會根據文件擴展名自動選擇合適的格式：

- `.md` 文件將使用 CommonMark 格式
- `.mdx` 文件將使用 MDX 格式

:::

:::danger[實驗性 CommonMark 支援]

CommonMark 支援目前處於**實驗階段**，並存在一些[限制](https://github.com/facebook/docusaurus/issues/9092)。

:::

## 標準功能 {#standard-features}

Markdown 是一種讓您能以易讀語法編寫格式化內容的語法。

```md
### My Doc Section

Hello world message with some **bold** text, some _italic_ text, and a [link](/)

![img alt](/img/docusaurus.png)
```

```mdx-code-block
<BrowserWindow>

<h3>My Doc Section</h3>

Hello world message with some **bold** text, some _italic_ text and a [link](/)

![img alt](/img/docusaurus.png)

</BrowserWindow>
```

<details>

<summary>Markdown is declarative</summary>

Some may assume a 1-1 correlation between Markdown and HTML, e.g., `![Preview](/img/docusaurus.png)` will always become `<img src="/img/docusaurus.png" alt="Preview" />`, as-is. However, _that is not the case_.

The Markdown syntax `![message](url)` only declaratively tells Docusaurus that an image needs to be inserted here, but we may do other things like transforming a [file path to URL path](./markdown-features-assets.mdx#images), so the generated markup may differ from the output of other Markdown renderers, or a naïve hand-transcription to the equivalent JSX/HTML code.

In general, you should only assume the _semantics_ of the markup (` ``` ` fences become [code blocks](./markdown-features-code-blocks.mdx); `>` becomes [quotes](#quotes), etc.), but not the actual compiled output.

</details>

## 前頁資料 {#front-matter}

前頁資料用於為 Markdown 文件添加元數據。所有內容插件都有各自的前頁資料結構，並利用前頁資料來豐富從內容或其他配置推斷出的預設元數據。

前頁資料位於文件最頂部，由三個破折號 `---` 包圍。其內容以 [YAML](https://yaml.org/spec/1.2.2/) 格式解析。

```md
---
title: My Doc Title
more_data:
  - Can be provided
  - as: objects
    or: arrays
---
```

:::info

每個官方插件的 API 文檔都列出了支援的屬性：

- [文檔前頁資料](../../api/plugins/plugin-content-docs.mdx#markdown-front-matter)
- [部落格前頁資料](../../api/plugins/plugin-content-blog.mdx#markdown-front-matter)
- [頁面前頁資料](../../api/plugins/plugin-content-pages.mdx#markdown-front-matter)

:::

:::tip[強化你的 front matter]

使用 [Markdown 配置中的 `parseFrontMatter` 函數](../../api/docusaurus.config.js.mdx#markdown) 來提供自訂的 front matter 解析器，或增強預設解析器。

你可以重複使用預設解析器，並用自訂的專有邏輯進行包裝。這樣可以實現方便的 front matter 轉換、快捷方式，或是整合外部系統中 Docusaurus 插件不支援的 front matter。

```js title="docusaurus.config.js"
export default {
  markdown: {
    // highlight-start
    parseFrontMatter: async (params) => {
      // 重複使用預設解析器
      const result = await params.defaultParseFrontMatter(params);

      // 處理 front matter 描述中的佔位符
      result.frontMatter.description =
        result.frontMatter.description?.replaceAll('{{MY_VAR}}', 'MY_VALUE');

      // 建立自訂的 front matter 快捷方式
      if (result.frontMatter.i_do_not_want_docs_pagination) {
        result.frontMatter.pagination_prev = null;
        result.frontMatter.pagination_next = null;
      }

      // 重新命名來自其他系統的不支援 front matter
      if (result.frontMatter.cms_seo_summary) {
        result.frontMatter.description = result.frontMatter.cms_seo_summary;
        delete result.frontMatter.cms_seo_summary;
      }

      return result;
    },
    // highlight-end
  },
};
```

:::

## 引用 {#quotes}

Markdown 的引用區塊有精美的樣式：

```md
> Easy to maintain open source documentation websites.
>
> — Docusaurus
```

<BrowserWindow>

> Easy to maintain open source documentation websites.
>
> — Docusaurus

</BrowserWindow>

## 詳細內容 {#details}

Markdown 可以嵌入 HTML 元素，而 [`details`](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/details) HTML 元素也有精美的樣式：

```md
### Details element example

<details>
  <summary>Toggle me!</summary>
  <div>
    <div>This is the detailed content</div>
    <br/>
    <details>
      <summary>
        Nested toggle! Some surprise inside...
      </summary>
      <div>😲😲😲😲😲</div>
    </details>
  </div>
</details>
```

```mdx-code-block
<BrowserWindow>

<h3>Details element example</h3>

<details>
  <summary>Toggle me!</summary>
  <div>
    <div>This is the detailed content</div>
    <br/>
    <details>
      <summary>
        Nested toggle! Some surprise inside...
      </summary>
      <div>😲😲😲😲😲</div>
    </details>
  </div>
</details>

</BrowserWindow>
```